--- a/publish.project.json
+++ b/publish.project.json
@@ -1,12 +1,34 @@
 {
-	"name": "knit-publish",
-	"tree": {
-		"$className": "DataModel",
-		"ReplicatedStorage": {
-			"$className": "ReplicatedStorage",
-			"Packages": {
-				"$path": "default.project.json"
-			}
-		}
-	}
+    "name": "knit-publish",
+    "tree": {
+        "$className": "DataModel",
+
+        "ReplicatedStorage": {
+            "$className": "ReplicatedStorage",
+            "$ignoreUnknownInstances": true,
+            "$path": "src/ReplicatedStorage"
+        },
+
+        "ServerScriptService": {
+            "$className": "ServerScriptService",
+            "$ignoreUnknownInstances": true,
+            "$path": "src/ServerScriptService"
+        },
+
+        "ServerStorage": {
+            "$className": "ServerStorage",
+            "$ignoreUnknownInstances": true,
+            "$path": "src/ServerStorage"
+        },
+
+        "StarterPlayer": {
+            "$className": "StarterPlayer",
+            "StarterPlayerScripts": {
+                "$className": "StarterPlayerScripts",
+                "$ignoreUnknownInstances": true,
+                "$path": "src/StarterPlayerScripts"
+            },
+            "$ignoreUnknownInstances": true
+        }
+    }
 }
